# Kiln

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  LICENSE  PRIVACY.md  README.md  SECURITY.md  TERMS.md  deploy.sh  docker-compose.yml  glama.json  install.sh  server.json  task.md
.claude/: settings.json
.claude/skills/debug/: SKILL.md
.claude/skills/swarm-bugbash/: SKILL.md
.claude/skills/swarm-debug/: SKILL.md
.claude/skills/swarm-feature/: SKILL.md
.claude/skills/swarm-release/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  printer_support.md
.github/workflows/: ci.yml  deploy-api.yml  deploy-site.yml  publish.yml
.well-known/: security.txt
demo/: demo.sh  demo.tape  fake-kiln  kiln-demo.webm
deploy/: .env.example  Caddyfile  Dockerfile.proxy  deploy.sh  docker-compose.yml
deploy/helm/kiln/: Chart.yaml  values.yaml
deploy/helm/kiln/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  (+4 more)
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/sql/: 20260224_pilot_entitlements.sql
docs/: COMPATIBILITY.md  COMPLETED_TASKS.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  GUIDE.md  LESSONS_LEARNED.md  LITEPAPER.md  PRINT_FLOW.md  PROJECT_DOCS.md  SAFETY.md  SKILL.md  SWARM_GUIDE.md  TASKS.md  THREAT_MODEL.md  UNATTENDED_OPS.md  WHITEPAPER.md  subject_matter_expertise_original_printable_design.md
docs/site/: .gitignore  CNAME  astro.config.mjs  full-site.html  index.html  package-lock.json  package.json
docs/site/public/: llms.txt  robots.txt
examples/: claude-desktop-mcp.json  kiln-config.yaml
kiln/: Dockerfile  README.md  pyproject.toml  requirements-lock.txt
kiln/src/kiln/: __init__.py  __main__.py  adaptive_slicer.py  agent_loop.py  ambient_safety.py  auth.py  auto_orient.py  autonomy.py  backup.py  bed_leveling.py  billing.py  billing_alerts.py  billing_invoice.py  circle_provider.py  cloud_sync.py  community_registry.py  consumer.py  cost_estimator.py  credential_store.py  cross_printer_learning.py  design_cache.py  design_intelligence.py  design_reasoning.py  design_validator.py  discovery.py  emergency.py  events.py  failure_recovery.py  failure_rerouter.py  file_metadata.py  firmware.py  fleet_analytics.py  fleet_orchestrator.py  fleet_scheduler.py  fulfillment_monitor.py  gcode.py  gcode_encryption.py  gcode_interceptor.py  gcode_metadata.py  generation_feedback.py  (+67 more)
kiln/src/kiln/cli/: __init__.py  config.py  discovery.py  main.py  output.py
kiln/src/kiln/data/: __init__.py  bambu_a1_end_gcode.gcode  bambu_a1_start_gcode.gcode  design_templates.json  material_catalog.json  printer_intelligence.json  safety_profiles.json  slicer_profiles.json  tool_safety.json
kiln/src/kiln/data/design_knowledge/: construction_materials.json  construction_patterns.json  construction_requirements.json  design_patterns.json  environment_compatibility.json  functional_requirements.json  load_tables.json  material_troubleshooting.json  materials.json  multi_material_pairing.json  post_processing.json  printer_material_compatibility.json  printer_profiles.json
kiln/src/kiln/fulfillment/: __init__.py  base.py  craftcloud.py  intelligence.py  proxy.py  proxy_server.py  registry.py  sculpteo.py  shapeways.py
kiln/src/kiln/gateway/: __init__.py  threedos.py
kiln/src/kiln/generation/: __init__.py  base.py  gemini.py  meshy.py  openscad.py  registry.py  stability.py  tripo3d.py  validation.py
kiln/src/kiln/marketplaces/: __init__.py  base.py  cults3d.py  etsy.py  grabcad.py  myminifactory.py  thangs.py  thingiverse.py
kiln/src/kiln/payments/: __init__.py  base.py  circle_provider.py  manager.py  stripe_provider.py
kiln/src/kiln/plugins/: __init__.py  adaptive_slicing_tools.py  consumer_tools.py  design_tools.py  estimate_tools.py  fulfillment_tools.py  generation_tools.py  intelligence_tools.py  interception_tools.py  learning_tools.py  marketplace_tools.py  material_catalog_tools.py  material_inventory_tools.py  material_tools.py  mesh_diagnostic_tools.py  monitoring_tools.py  network_tools.py  printability_tools.py  queue_tools.py  recovery_tools.py  service_tools.py  smart_print_tools.py
kiln/src/kiln/printers/: __init__.py  bambu.py  bambu_3mf.py  base.py  elegoo.py  moonraker.py  octoprint.py  prusaconnect.py  serial_adapter.py
kiln/tests/: conftest.py  test_adaptive_slicer.py  test_adhesion_diagnosis.py  test_agent_loop.py  test_agent_memory_versioning.py  test_ambient_safety.py  test_audit_export.py  test_audit_hmac.py  test_auth.py  test_auth_scope_audit.py  test_auto_orient.py  test_autonomy.py  test_backup.py  test_bambu_3mf.py  test_bambu_adapter.py  test_base.py  test_bed_leveling.py  test_billing.py  test_billing_e2e.py  test_circle_provider.py  test_cli_advanced.py  test_cli_config.py  test_cli_main.py  test_cli_quickstart.py  test_cloud_sync.py  test_community_registry.py  test_community_safety_profiles.py  test_config_permissions.py  test_consumer.py  test_cost_estimator.py  test_credential_store.py  test_cross_printer_learning.py  test_cross_printer_learning_engine.py  test_design_generation_improvements.py  test_design_intelligence.py  test_design_tools_plugin.py  test_design_validator.py  test_device_generalization.py  test_discovery.py  test_discovery_trust.py  (+135 more)
octoprint-cli/: .gitignore  README.md  pyproject.toml  requirements-lock.txt  sample-config.yaml
octoprint-cli/src/octoprint_cli/: __init__.py  cli.py  client.py  config.py  exit_codes.py  output.py  safety.py
octoprint-cli/tests/: conftest.py  test_client.py  test_config.py  test_exit_codes.py  test_output.py  test_safety.py
redirects/kiln-print/: README.md  pyproject.toml
redirects/kiln-print/src/kiln_print/: __init__.py
redirects/kiln-printer/: README.md  pyproject.toml
scripts/: circle_setup.py  octoprint_mock.py
(+37 files in other folders)
