[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiln3d"
version = "0.1.0"
description = "Agentic infrastructure for physical fabrication via 3D printing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kiln Contributors"},
]
keywords = ["3d-printing", "mcp", "agent", "fabrication", "manufacturing", "octoprint", "moonraker", "klipper", "bambu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Printing",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0",
    "requests>=2.25",
    "pyyaml>=5.4",
    "pydantic>=2.0",
    "click>=8.0",
    "zeroconf>=0.80",
    "rich>=12.0",
]

[project.optional-dependencies]
bambu = ["paho-mqtt>=2.0"]
rest = ["fastapi>=0.100", "uvicorn[standard]>=0.25"]
stripe = ["stripe>=5.0"]
payments = ["stripe>=5.0"]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.6",
    "responses>=0.20",
]

[project.scripts]
kiln = "kiln.cli.main:cli"

[project.urls]
Homepage = "https://github.com/codeofaxel/Kiln"
Issues = "https://github.com/codeofaxel/Kiln/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
