[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiln3d"
version = "0.1.0"
description = "Agentic infrastructure for physical fabrication via 3D printing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kiln Contributors"},
]
keywords = ["3d-printing", "mcp", "agent", "fabrication", "manufacturing", "octoprint", "moonraker", "klipper", "bambu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Printing",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0",
    "requests>=2.25",
    "pyyaml>=5.4",
    "pydantic>=2.0",
    "click>=8.0",
    "zeroconf>=0.80",
    "rich>=12.0",
    "paho-mqtt>=2.0",
]

[project.optional-dependencies]
bambu = []  # Bambu support is now included by default
rest = ["fastapi>=0.100", "uvicorn[standard]>=0.25"]
stripe = ["stripe>=5.0"]
payments = ["stripe>=5.0", "cryptography>=41.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.6",
    "responses>=0.20",
]

[project.scripts]
kiln = "kiln.cli.main:cli"

[project.urls]
Homepage = "https://github.com/codeofaxel/Kiln"
Issues = "https://github.com/codeofaxel/Kiln/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: requires a real OctoPrint instance (deselect with '-m \"not live\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary — readability preference
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kiln = ["data/*.json", "py.typed"]
