[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiln3d"
version = "0.1.0"
description = "MCP server + CLI for AI agents to control 3D printers (OctoPrint, Moonraker, Bambu Lab, Prusa Link) — 230 tools for print farm automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kiln Contributors"},
]
keywords = [
    "3d-printing", "mcp", "mcp-server", "model-context-protocol",
    "ai-agent", "agent", "llm", "automation",
    "fabrication", "manufacturing", "print-farm",
    "octoprint", "moonraker", "klipper", "bambu", "bambu-lab", "prusa", "prusa-link", "elegoo",
    "gcode", "slicer", "prusaslicer", "orcaslicer",
    "iot", "smart-manufacturing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Printing",
    "Topic :: Scientific/Engineering",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]
dependencies = [
    "mcp>=1.0",
    "requests>=2.25",
    "pyyaml>=5.4",
    "pydantic>=2.0",
    "click>=8.0",
    "zeroconf>=0.80",
    "rich>=12.0",
    "paho-mqtt>=2.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
bambu = []  # Bambu support is now included by default
elegoo = ["websocket-client>=1.6"]
postgres = ["psycopg2-binary>=2.9"]
rest = ["fastapi>=0.100", "uvicorn[standard]>=0.25"]
stripe = ["stripe>=5.0"]
payments = ["stripe>=5.0", "cryptography>=41.0"]
serial = ["pyserial>=3.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.6",
    "responses>=0.20",
]

[project.scripts]
kiln = "kiln.cli.main:cli"

[project.urls]
Homepage = "https://kiln3d.com"
Documentation = "https://kiln3d.com/docs"
Repository = "https://github.com/codeofaxel/Kiln"
Issues = "https://github.com/codeofaxel/Kiln/issues"
Changelog = "https://github.com/codeofaxel/Kiln/releases"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: requires a real OctoPrint instance (deselect with '-m \"not live\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary — readability preference
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kiln = ["data/*.json", "py.typed"]
